--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>DC Importer</title>
+    <link rel="icon" href="src/assets/favicon_package_v0.16/favicon.ico">
 </head>
 
 <body>
     <div id="app"></div>
     <script src="../dist/build.js"></script>
-  </body>
+</body>
+
 </html>
